libs/sqf/tests/snapshots/simple__simple_number.snap
---
source: libs/sqf/tests/simple.rs
expression: ast
---
[
    AssignLocal(
        "_number",
        Number(
            FloatOrd(
                6000000000.0,
            ),
            18..28,
        ),
        0..28,
    ),
]
