libs/sqf/tests/snapshots/simple__simple_oneline.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    18,
    0,
    0,
    0,
    2,
    35,
    3,
    0,
    1,
    0,
    0,
    97,
    1,
    0,
    0,
    43,
    5,
    0,
    0,
    118,
    97,
    108,
    117,
    101,
    17,
    0,
    0,
    1,
    106,
    0,
    0,
    0,
    2,
    0,
    6,
    3,
    0,
    1,
    1,
    0,
    0,
    49,
    1,
    48,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    49,
    32,
    34,
    92,
    111,
    110,
    101,
    108,
    1,
    0,
    18,
    46,
    115,
    113,
    102,
    34,
    10,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    118,
    97,
    108,
    117,
    101,
    32,
    61,
    32,
    97,
    32,
    43,
    32,
    34,
    49,
    34,
    59,
    10,
    0,
    1,
    0,
    0,
    0,
    101,
    0,
    5,
    114,
    0,
    7,
    39,
    116,
    0,
    104,
    2,
    0,
    5,
    1,
    0,
    0,
    3,
    41,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    6,
    23,
    0,
    0,
    0,
    0,
    1,
    0,
    2,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    12,
    0,
    0,
    47,
    111,
    110,
    101,
    108,
    105,
    110,
    101,
    46,
    115,
    113,
    102,
    3,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
