libs/sqf/tests/snapshots/simple__simple_semicolons.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    52,
    0,
    0,
    0,
    2,
    69,
    6,
    0,
    5,
    0,
    0,
    95,
    116,
    101,
    115,
    116,
    10,
    0,
    0,
    115,
    121,
    115,
    116,
    101,
    109,
    99,
    104,
    97,
    116,
    9,
    0,
    0,
    95,
    118,
    97,
    114,
    105,
    97,
    98,
    108,
    101,
    2,
    0,
    0,
    61,
    61,
    2,
    0,
    0,
    105,
    102,
    4,
    0,
    0,
    116,
    104,
    101,
    110,
    17,
    0,
    0,
    1,
    159,
    1,
    0,
    0,
    2,
    0,
    22,
    5,
    0,
    3,
    1,
    1,
    14,
    0,
    0,
    116,
    104,
    105,
    115,
    32,
    105,
    115,
    32,
    97,
    32,
    116,
    101,
    115,
    116,
    0,
    179,
    0,
    0,
    0,
    28,
    0,
    0,
    128,
    3,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    2,
    96,
    2,
    0,
    30,
    0,
    9,
    0,
    1,
    0,
    1,
    246,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    49,
    32,
    34,
    92,
    115,
    101,
    109,
    105,
    99,
    111,
    108,
    111,
    110,
    115,
    46,
    115,
    113,
    102,
    34,
    10,
    59,
    32,
    59,
    10,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    95,
    100,
    9,
    5,
    32,
    61,
    32,
    116,
    114,
    117,
    101,
    59,
    132,
    3,
    9,
    115,
    121,
    115,
    116,
    101,
    109,
    67,
    104,
    97,
    116,
    32,
    34,
    44,
    193,
    1,
    34,
    161,
    4,
    112,
    232,
    7,
    7,
    118,
    97,
    114,
    105,
    97,
    98,
    108,
    101,
    32,
    61,
    49,
    164,
    0,
    2,
    105,
    102,
    32,
    40,
    95,
    40,
    132,
    0,
    48,
    136,
    0,
    11,
    41,
    32,
    116,
    104,
    101,
    110,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    59,
    148,
    0,
    59,
    232,
    1,
    187,
    4,
    125,
    59,
    10,
    59,
    149,
    0,
    0,
    144,
    33,
    1,
    0,
    0,
    0,
    19,
    144,
    34,
    1,
    0,
    0,
    6,
    30,
    97,
    1,
    2,
    112,
    0,
    105,
    36,
    56,
    99,
    1,
    4,
    0,
    1,
    130,
    38,
    6,
    89,
    116,
    1,
    4,
    6,
    0,
    2,
    0,
    0,
    7,
    131,
    104,
    1,
    6,
    7,
    0,
    2,
    0,
    1,
    1,
    0,
    3,
    141,
    176,
    1,
    1,
    3,
    0,
    2,
    127,
    164,
    1,
    4,
    4,
    0,
    1,
    2,
    0,
    3,
    162,
    176,
    1,
    13,
    5,
    0,
    0,
    1,
    1,
    0,
    2,
    217,
    0,
    0,
    0,
    0,
    12,
    0,
    1,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    15,
    0,
    0,
    47,
    115,
    101,
    109,
    105,
    99,
    111,
    108,
    111,
    110,
    115,
    46,
    115,
    113,
    102,
    3,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
